tests/paczka1/fuzzy1/36705667.err
Error in line 2: 2jI A100 17,7
Error in line 8: OTwvsm A482 45,4
Error in line 19: A606 S31 7,4
Error in line 9: 2jI A482 281,9
Error in line 25: WHPxsuhoiJs S31 87,51
Error in line 35: WHPxsuhoiJs A100 14,2
Error in line 13: g1a A482 67,0
